# cpp_for_developers

./: .gitignore  7_vector.cpp  README.md  string_class.cpp
intermediate_project_template/include/: Course.h
intermediate_project_template/src/: Course.cpp  Student.cpp
makefile_example/: Makefile
project_templates/cmake_project_template/: CMakeLists.txt  README.md
project_templates/cmake_project_template/include/: Course.h
project_templates/cmake_project_template/src/: Course.cpp  Student.cpp
project_templates/exercise_project_template/: main.cpp
project_templates/intermediate_project_template/: Makefile  main.cpp
project_templates/simple_project_template/: HelloWorld.cpp  HelloWorld.h  Makefile  main.cpp
week_1/: 2_input_output_examples.cpp  3_data_types.cpp  6_string_class.cpp  7_vector.cpp  8_loops.cpp  9_control_statements.cpp  exercises.md  week_1.md
week_1/exercise_demos/: 1_hello_world.cpp  3_present_yourself.cpp  6_time_calculator.cpp
week_1/live_coded_project/: main.cpp
week_1_control_statements_and_loops/: 3_exceptions.cpp  control_statements.cpp  loops.cpp
week_1_data_types/: 4_derived_data_types.cpp  6_string_class.cpp  basic_syntax.cpp  data_types.cpp  input_output_examples.cpp  user_defined_data_types.cpp
week_2/: 1_functions  1_functions.cpp  exceptions.cpp  exercies.md  exercises.md  week_2.md
week_3/: exercises.md  week_3.md
week_4/: exercises.md  extra_exercise.md  week_4.md
week_5/: exercises.md  week_5.md  wokwi_guide.md
week_6/: exercises.md  week_6.md
week_7/: exercises.md  readme.md  week_7.md
(+176 files in other folders)
